m数据结构重写

--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.7.2",
 	"appid": "wx0fddd41f3125931a",
-	"projectname": "divorce%20lawer",
+	"projectname": "%E7%A6%BB%E5%A9%9A%E5%BE%8B%E5%B8%88",
 	"condition": {
 		"search": {
 			"current": -1,
